[package]
name = "object_storage_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
fs = ["opendal/executors-tokio", "opendal/services-fs"]
s3 = ["opendal/executors-tokio", "opendal/services-s3"]
s3_tls = ["opendal/default"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac-sha256 = { workspace = true }
opendal = { version = "0.54", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
