[package]
name = "sched_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["tokio_cron"]
tokio_cron = [
    "dep:tokio",
    "dep:tokio-cron-scheduler",
    "dep:chrono",
    "dep:chrono-tz",
]

[dependencies]
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-cron-scheduler = { workspace = true, features = [
    "english",
], optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true }
