[package]
name = "sched_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["tokio_cron"]
tokio_cron = [
    "dep:tokio",
    "dep:cron",
    "dep:cron_tab",
    "dep:english-to-cron",
    "dep:chrono",
    "dep:chrono-tz",
]

[dependencies]
chrono = { workspace = true, optional = true }
chrono-tz = { workspace = true, optional = true }

cron = { version = "0.15", default-features = false, optional = true }
cron_tab = { workspace = true, optional = true }
english-to-cron = { version = "0.1", default-features = false, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true }
