[package]
name = "tencent_location_kit"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
http_client_kit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
