[package]
name = "trace_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
console = []
rolling = ["dep:tracing-appender", "tracing-subscriber/json"]
otel = ["dep:tracing-opentelemetry"]

[dependencies]
bon = { workspace = true }
tracing-appender = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
    "env-filter",
] }
