[package]
name = "trace_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
console = []
rolling = ["dep:tracing-appender", "tracing-subscriber/json"]
otlp = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]

[dependencies]
bon = { workspace = true }
opentelemetry = { version = "0.30", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.30", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.30", default-features = false, optional = true }

tracing-appender = { version = "0.2", default-features = false, optional = true }
tracing-opentelemetry = { version = "0.31", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }
