[package]
name = "trace_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
console = []
rolling = ["dep:tracing-appender", "tracing-subscriber/json"]
otlp = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:serde_json",
]
otlp_tls = ["opentelemetry-otlp/tls-roots"]

[dependencies]
bon = { workspace = true }
opentelemetry = { version = "0.30", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "trace",
    "grpc-tonic",
], optional = true }

opentelemetry-semantic-conventions = { version = "0.30", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.30", default-features = false, optional = true }
serde_json = { workspace = true, optional = true }

tracing-appender = { version = "0.2", default-features = false, optional = true }
tracing-opentelemetry = { version = "0.31", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }
