[package]
name = "wukongim_kit"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
